<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/ic_nav_padding_start"
                android:src="@drawable/ic_back" />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/container_layout_margin"
            android:layout_marginLeft="@dimen/container_layout_margin"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/login_welcome_msg"
                android:layout_centerInParent="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/logo2"
                />

            <TextView
                android:id="@+id/signup_title"
                style="@style/LabelStyle"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/signup_title"
                android:layout_below="@id/login_welcome_msg"
                android:textColor="@color/orange"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/et_full_name"
                style="@style/EditTextStyle"
                android:layout_below="@id/signup_title"
                android:layout_marginTop="6dp"
                android:hint="@string/full_name_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_email_address"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_full_name"
                android:layout_marginTop="6dp"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_phone_no"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_email_address"
                android:layout_marginTop="6dp"
                android:hint="@string/phone_hint"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_car_name"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_phone_no"
                android:layout_marginTop="6dp"
                android:hint="@string/car_name_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:layout_below="@id/et_car_name"
                android:layout_marginTop="6dp"
                android:hint="@string/password_hint"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btn_signup"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/et_password"
                android:layout_marginTop="10dp"
                android:text="@string/signup_btn_label" />


            <RelativeLayout
                android:id="@+id/login_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/login"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:onClick="login"
                    android:text="@string/login_label"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>
</layout>